2000-03-08  Akim Demaille  <akim@epita.fr>

	* tests/Makefile.am (all-local): Remove.  It wastes time to have
	testsuite rebuilt each time an ac*.m4 file changes.  It is enough
	to build it for each `make check'.

2000-03-08  Akim Demaille  <akim@epita.fr>

	Leave a diversion exclusively for Copyright notices.

	* acgeneral.m4 (AC_DIVERSION_DEFAULTS): New diversion number.
	(_AC_INIT_NOTICE): Move definition of `ac_includes_default' from
	here...
	(_AC_INIT_PREPARE): to here.
	(_AC_INIT_NOTICE): Play with your diversion yourself, don't let
	(AC_INIT): do it for you.
	(_AC_INIT_DEFAULTS): New macro.
	(AC_INIT): Use it.

2000-03-08  Akim Demaille  <akim@epita.fr>

	Provide a means to specify more Copyright information in
	`configure'.  And after all, it suits to `configure --version' too.

	* acgeneral.m4 (AC_DIVERSION_DEFAULTS, AC_DIVERSION_INIT_PREPARE):
	New diversion numbers.
	(AC_DIVERSION_INIT): Renamed as...
	(AC_DIVERSION_INIT_PARSE_ARGS): this.
	(AC_DIVERT_POP): Instead of going into wild endless loops when
	there are more pops than pushes, die with dignity.
	(AC_COPYRIGHT): New macro.
	(_AC_INIT_NOTICE): Move definition of `ac_includes_default' from
	here...
	(_AC_INIT_PREPARE): to here.
	(_AC_INIT_NOTICE): Remove.
	(AC_INIT): Use it to install Autoconf's Copyright.
	(_AC_INIT_DEFAULTS): New macro.
	(AC_INIT): Use it.
	(AC_PREFIX_DEFAULTS): Dump in AC_DIVERSION_DEFAULTS.
	(_AC_INIT_PARSE_ARGS): Dump in AC_DIVERSION_INIT_PREPARE.

2000-03-08  Akim Demaille  <akim@epita.fr>

	We don't need _AC_ARG_*_HELP_PROLOGUE.

	* acgeneral.m4 (AC_EXPAND_ONCE): AC_PROVIDE yourself, in case
	there is no AC_DEFUN associated with the text to expand.
	(_AC_ARG_ENABLE_HELP_PROLOGUE, _AC_ARG_WITH_HELP_PROLOGUE,
	_AC_ARG_VAR_HELP_PROLOGUE): Remove, instead...
	(AC_ARG_ENABLE, AC_ARG_WITH, AC_ARG_VAR): do it yourself.

2000-03-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): Fix copy n' paste typos in
	`--with-*', `--without-*' and `*' decoding.